# micro-os

./: .gitignore  CMakeLists.txt
docs/syscall/: closeMsgBox.md  contents.md  exit.md  fork.md  initMsgBox.md  listenToIRQ.md  mapPhysicalMemory.md  maxMsgBoxId.md  moveMsgBox.md  recvAnyMsg.md  recvMsgFrom.md  releasePriviledge.md  replaceMe.md  sbrk.md  sendPacket.md
scripts/: bundle.sh  grub.cfg
src/apps/: CMakeLists.txt  linker.ld
src/apps/demo/: CMakeLists.txt  linker.ld
src/apps/demo/src/: main.c
src/apps/idle/: CMakeLists.txt  linker.ld
src/apps/idle/src/: main.c
src/base/: CMakeLists.txt
src/base/include/base/sys/: ipc.h  unistd.h
src/base/src/: crt.asm  crt.c
src/base/src/sys/: ipc.c  syscall.c  syscall.h  unistd.c
src/core/: CMakeLists.txt
src/core/include/core/: BitSet.h  utility.h
src/core/include_std/: ctype.h
src/core/src/: ctype.c  string.c
src/core/src/core/: BitSet.c
src/kernel/: CMakeLists.txt  linker.ld
src/kernel/include/: cpu.h  multiboot2.h
src/kernel/include/cpu/: RegState.h  interrupt.h
src/kernel/include/process/: ELFImage.h  IRQManager.h  MessageBox.h  Process.h  scheduler.h  syscall.h
src/kernel/include/ram/: PMM.h  PMStat.h  PageTable.h  constants.h
src/kernel/src/: exception.c  irq.c  kernel_start.asm  main.c  syscall.c
src/kernel/src/cpu/: IDT.c  IDT.h  RegState.c  cpu.asm  cpu.c  int.asm  int.h  interrupt.c
src/kernel/src/process/: ELFImage.c  IRQManager.c  MessageBox.c  Process.c  ProcessQueue.c  ProcessQueue.h  scheduler.c  syscall.c
src/kernel/src/ram/: PMM.c  PMStat.c  PageTable.c  pageFaultHandler.c  pageFaultHandler.h
